# Service_Robot

./: Custom  workspace and create package.txt  README.md
navi_goals/: CMakeLists.txt
navi_goals/config/: waypoints.yaml
navi_goals/launch/: navi_goals.launch
navi_goals2/: CMakeLists.txt  package.xml
navi_goals3/: CMakeLists.txt  package.xml
navi_goals4/: CMakeLists.txt  package.xml
navi_goals5/: CMakeLists.txt  package.xml
service_robot/: CMakeLists.txt  package.xml
service_robot/config/: joint_names_service_robot.yaml
service_robot/launch/: amcl_move_base.launch  amcl_move_base_gazebo.launch  display.launch  gazebo.launch  gmapping.launch
service_robot/maps/: map.pgm  map.yaml  test_map.pgm  test_map.yaml
service_robot/meshes/: base_link.STL  left_wheel_link.STL  lidar.STL  right_wheel_link.STL
service_robot/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
service_robot/ros_web_ws/: ColladaLoader2.js  Publish_table_from_web.js  STLLoader.js  TEST.HTML  cal_odom.py  keyboardteleop.html  model.css  model.scss  test_map_ver2.html  test_web_ver3.html  web-gui.html
service_robot/rviz/: gmapping.rviz  navigation.rviz
service_robot/scripts/: call_navi_goal_from_web.py  converted_odom.py  keyboard_teleop.py  listener.cpp  system_boot.py  talker.cpp
service_robot/urdf/: backup.text  macros.xacro  mybot.gazebo  mybot.xacro  service_robot.csv  service_robot.urdf
service_robot/worlds/: 10x10.world  20x20.world  nw.world
(+14 files in other folders)
